--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- partial:index.partial.html -->
     <div class="slidercaptcha card">
       <div class="card-header">
-        <span>Drag To Verify</span>
+        <span></span>
       </div>
       <div class="card-body">
         <div id="captcha"></div>
